# ginger_wechat_portrait

./: .gitignore  MANIFEST.in  NOTICE.md  README.md  SKILL.md  config.example.toml  export_contact.py  install-macos.sh  main.py  personality.py  pyproject.toml  visualizer.py  安装指南.md
.claude/commands/: analyze-wechat.md
.github/workflows/: ci.yml  release.yml
docs/: CHATGPT_PRO_REVIEW.md  INSTALL_MACOS.md  PERSONAL_CHAT_AGENT.md  SECURITY.md  SHADOW_REPLAY.md  SHADOW_REPLAY_REPORT.json  TUTORIAL_ZH.md
packaging/: com.christophercc.ginger-agent.plist
personal_agent/: __init__.py  builder.py  cli.py  config.py  corrections.py  costs.py  crypto_store.py  decision.py  distillation.py  emotion_cycle.py  ingest.py  learning.py  ledger.py  models.py  operations.py  policy.py  replay.py  report.py  runtime.py  runtime_state.py  schema.py  sender.py  service.py  storage.py  wechat_reader.py
scripts/: build-release.sh  check-release-tree.py  install-release.sh
tests/: test_canary_arm.py  test_ledger_integrity.py  test_local_ops_security.py  test_model_security.py  test_personal_agent.py  test_publish_privacy.py  test_reader_security.py  test_relationship_profile.py  test_runtime_construction.py  test_runtime_data_plane.py  test_runtime_intelligence.py  test_runtime_learning.py  test_runtime_ops.py  test_runtime_pipeline.py  test_shadow_replay.py  test_wechat_db_tools.py
tests/fixtures/: risk_cases.json  shadow_replay.json
tools/: __init__.py
tools/wechat_db/: __init__.py  common.py  decrypt_macos.py  doctor_macos.py  find_keys_macos.py
